# fastsaas-cli

./: .pre-commit-config.yaml  main.py  pyproject.toml
fastsaas_cli/: project_init.py
fastsaas_cli/generators/: __init__.py
fastsaas_cli/generators/module/: module.py
fastsaas_cli/generators/module/stubs/: routes-web.py
